<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Wreck Detection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_uploads">No upload</string>
<string  name="image">image</string>
    <string-array name="list_titles">
        
        <item > Upload</item>
        <item>Emergency Contacts</item>
        <item > Accident Detection Service</item>
        <item >My Location</item>
 </string-array>
 <string name="snapshot_take_button">Take Snapshot</string>
    <string name="menu_done">Done</string>
    <string name="location">Location</string>
    <string name="Next">Next</string>
    <string name="Exit">Exit</string>
    <string name="upload_activity">Uploads</string>
     <string name="send_loaction_activity">Send Accident Location</string>
      <string name="accident_detection_activity">Accident Detction Service</string>
       <string name="contacts_activity">Choose Your Emergency Contacts </string>
       <string name="setting">Setting</string>
        <string name="howto">How to</string>
        <string name="cancel">Cancel</string>
        <string name="submit">Submit</string>
         <string name="no_contacts">No Contacts Found</string>
          <string name="search_match_other">Matches Other Field</string>
            <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
      <string name="search_hint">Find contacts</string>
       <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
 <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
 <string name="upload">UPload</string>
 <string name="photo">Photo</string>
 <string name="video">Video</string>
 <string name="my_location">My location</string>
 <string name="addLocationSnippet">Add Location Snippet</string>
 <string name="action_bar_send">Send</string>
 <string name="takePic">take pic</string>
 <string  name="activate_service"> To activate/deactivate Accident Detection Service press the Button below</string>
 <string name="add_contact">Add Contact</string>
 <string name="sreviceStatus">Service is Running</string>
 <string  name="soundlevel"> Sound in db level</string>
 <string name ="location_coord">Location Coordinate</string>
 <string name="acceleration" >Acceleration</string>
 <string name="service_status">Car Wreck Detection</string>
 <string  name="yes">Yes</string>
 <string  name="no">No</string>
 <string name="alert">Alert</string>
 <string name="accident_title">Accident Detetcion Service has detected a Crash. \n 
     Did an Accident Occure?</string>
 <string name="confirm">Confirm</string>
 <string name="menu_delete">delete</string>
 <string name="speed">Speed</string>
 <string name="lat">Latitude</string>
 <string name="lon">Longitude</string>
 <string name="SendVideo">Send Video</string>
 <string name="SendSMS">Send SMS</string>
 <string name="rec_">REC</string>
<string name="widgetName">Assistive Service</string>
<string name="off">Off</string>
<string name="net_Con"> Unable to connect to the network.
    \nCheck your network setting and try again.
    
    </string>
   <string name="timerVal">00:00</string>

</resources>
