<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/sreviceStatus"
        android:textColor="@color/divider_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_accelerartion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="@string/acceleration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/switch_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:background="@color/divider_color"
        android:checked="true"
        android:text=""
        tools:ignore="NewApi" />

    <TextView
        android:id="@+id/acc_axsie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_toRightOf="@+id/txt_accelerartion"
       android:layout_below="@+id/switch_service"
       android:layout_marginTop="25dp"
       android:layout_marginLeft="20dp"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_accelerartion"
        android:layout_marginTop="50dp"
        android:text="@string/lat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lat_cord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_axsie"
        android:layout_toRightOf="@+id/text_lat"
        android:layout_marginTop="20dp"
       android:layout_alignParentRight="true"
      android:layout_marginLeft="38dp"
        android:text="" />
     <TextView
        android:id="@+id/text_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lat_cord"
        android:layout_marginTop="20dp"
        android:text="@string/lon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lon_cord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lat_cord"
        android:layout_toRightOf="@+id/text_lon"
        android:layout_marginTop="20dp"
       android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:text="" />
     
     <TextView
        android:id="@+id/text_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lon_cord"
        android:layout_marginTop="20dp"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lon_cord"
        android:layout_toRightOf="@+id/text_lon"
        android:layout_marginTop="20dp"
       android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:text="" />
   
    
     <TextView
        android:id="@+id/text_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_speed"
        android:layout_marginTop="40dp"
        android:text="@string/soundlevel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sound_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed_value"
        android:layout_toRightOf="@+id/text_sound"
        android:layout_marginTop="40dp"
       android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:text="" />
    
    
    

</RelativeLayout>